Add places result list

--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@ Review a shop </span>
             </div>
         </div>
 
+      <div id="results">
+        <h2>Results</h2>
+        <ul id="places"></ul>
+      </div>
+
 <!--        <div id="gmap_canvas"></div>-->
         <!--/ HOMEPAGE-->
 
