--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <link href="css/index.css" rel="stylesheet" type="text/css" />
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link href="css/homepage.css" rel="stylesheet" type="text/css" />
+    <link href="css/meta_hotels_2013-en_UK-v2437620083a.css" rel="stylesheet" type="text/css" />
 
 
     <!-- GooglePlacesAPIExample begin -->
-<!--
+    <!--
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
     <script src="js/script.js"></script>
@@ -146,7 +147,7 @@ Review a shop </span>
                                                     <input id="gmap_where" type="text" name="gmap_where" class="big_text sHotels fl focusInput focusClear no_cpu typeahead beforeOnLoad" tabindex="1" autocomplete="off" onFocus="geolocate()" placeholder="e.g Oxford Street, London, UK">
 
                                                     <!-- geolocation begin -->
-<!--
+                                                    <!--
                                                     <script src="js/modernizr-2.8.3.js"></script>
                                                     <script src="js/geolocation.js"></script>
 -->
@@ -189,7 +190,7 @@ Review a shop </span>
                                 (function () {
                                     var head = document.getElementById("ppt_header");
                                     if (head) {
-//                                        head.innerHTML = "shop till you drop";
+                                        //                                        head.innerHTML = "shop till you drop";
                                     }
                                 })()
                             </script>
@@ -202,15 +203,141 @@ Review a shop </span>
             </div>
         </div>
 
-      <div id="results">
-        <h2>Results</h2>
-        <ul id="places"></ul>
-      </div>
+<!--
+        <div id="results">
+            <h2>Results</h2>
+            <ul id="places"></ul>
+        </div>
+-->
 
-<!--        <div id="gmap_canvas"></div>-->
-        <!--/ HOMEPAGE-->
 
+        <!--trkN:1/L:1022759-->
+
+
+    <div id="MAIN">
+<div class="gridA single_col_hotels">
+    <div class="col balance">
+        <div id="HAC_RESULTS">
+            <div class="hotels_list_placement">
+                <div id="taplc_hotels_list_short_cells_0" class="ppr_rup ppr_priv_hotels_list_short_cells locale_en locale_en_UK ltr">
+                    <div id="ACCOM_OVERVIEW" class="deckA hacTabLIST shortCells noDates" data-navarea-placement="Main">
+
+
+                        <div class=" listing easyClear p13n_imperfect " id="hotel_1022759 " data-locationid="1022759 " data-rankinlist="1 ">
+                            <div class="listing easyClear p13n_imperfect " id="hotel_1022759 " data-locationid="1022759 " data-rankinlist="1 ">
+                                <div class="meta_listing easyClear metaCacheKey ">
+                                    <div class="metaLocationInfo ">
+                                        <div class="property_details easyClear ">
+                                            <div class="photo_booking ">
+                                                <a href="http://www.tripadvisor.co.uk/Hotel_Review-g295424-d1022759-Reviews-Atlantis_The_Palm-Dubai_Emirate_of_Dubai.html " target="_blank " onclick="ta.setEvtCookie(&#39;Reviews&#39;, &#39;Thumbnail&#39;, &#39;1022759&#39;, 0, this.href); ta.util.cookie.setPIDCookie(15178); ">
+                                                    <img id="lazyload_1987567761_6 " height="135 " style="height: 135px; width: 206px; margin-left: -15px; " alt="Atlantis, The Palm " width="175 " class="photo_image " src="./30 Best Dubai Hotels on TripAdvisor - Prices & Reviews for the Top Rated Accommodation in Dubai, United Arab Emirates_files/atlantis-the-palm.jpg ">
+                                                    <div class="photo_badge_tc ">
+                                                        <div class="bestLink collapsible wrap ">
+                                                            <div class="fl ">
+                                                                <img class="sprite-tchAwardIcon " src="./30 Best Dubai Hotels on TripAdvisor - Prices & Reviews for the Top Rated Accommodation in Dubai, United Arab Emirates_files/x.gif " alt="Travellers&#39; Choice award winner ">
+                                                            </div>
+                                                            <b class="lbl "> Travellers' Choice® 2015 Winner </b><span class="awardlist ">
+Family
+</span>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <span class="slideshow taLnk hvrIE6 " onclick="ta.trackEventOnPage( &#39;Hotels&#39; , &#39;BL_SLIDESHOW|text|1|1|1&#39;, &#39;1022759&#39;, 0); ta.call(&#39;ta.overlays.Factory.loadBLSlideshowOverlay&#39;, event, this, 1022759, 15135); ">
+Slideshow </span>
+                                            </div>
+                                            <div class="listing_info jfy ">
+                                                <div class="listing_title ">
+                                                    <a target="_blank " href="http://www.tripadvisor.co.uk/Hotel_Review-g295424-d1022759-Reviews-Atlantis_The_Palm-Dubai_Emirate_of_Dubai.html " id="property_1022759 " class="property_title " onclick=" ta.setEvtCookie(&#39;Reviews&#39;, &#39;HotelName&#39;, 295424, 0, this.href); ta.util.cookie.setPIDCookie(15176); " dir="ltr ">
+Atlantis, The Palm</a>
+                                                    <span class="so sprite_adjust_Offers sprite-badge_so_refresh " onmouseover="ta.plc_hotels_list_short_cells_0_handlers.specialOffersOverlay(event, this); ">
+<span class="overlayContents ">
+Offers &amp; Announcements <a href="http://www.tripadvisor.co.uk/Hotel_Review-g295424-d1022759-Reviews-Atlantis_The_Palm-Dubai_Emirate_of_Dubai.html " onclick=" ta.setEvtCookie(&#39;Hotels&#39;, &#39;BL_COUPON_ANOUNCEMENT|text|1|1|1|PACKAGE&#39;, &#39;1022759|793946|63523&#39;, 1, this.href); ta.servlet.blcoupons.couponAnnouncementViewWithOpen(&#39;viewcouponandannouncement&#39;, &#39;793946&#39;, &#39;63523&#39;, &#39;1022759&#39;, &#39;http://c1.tacdn.com/css2/pages/coupon-v23605967338a.css&#39;, &#39;&#39;, &#39;&#39;, &#39;&#39;, false, &#39;/Hotel_Review-g295424-d1022759-Reviews-Atlantis_The_Palm-Dubai_Emirate_of_Dubai.html&#39;); return true; " class="taLnk hvrIE6 " target="_blank ">Half Board Offer</a>
+</span>
+                                                    </span>
+                                                </div>
+                                                <div class="listing_rating ">
+                                                    <div class="rating ">
+                                                        <span class="rate rate_s s45 ">
+<img class="sprite-ratings " src="./30 Best Dubai Hotels on TripAdvisor - Prices & Reviews for the Top Rated Accommodation in Dubai, United Arab Emirates_files/x.gif " alt="4.5 of 5 stars ">
+</span>
+                                                        <span class="more ">
+<a onclick=" ta.setEvtCookie(&#39;Reviews&#39;, &#39;ReviewCount&#39;, &#39;&#39;, 0, &#39;/Hotel_Review&#39;); " target="_blank " href="http://www.tripadvisor.co.uk/Hotel_Review-g295424-d1022759-Reviews-Atlantis_The_Palm-Dubai_Emirate_of_Dubai.html#REVIEWS ">
+7,703 reviews
+</a>
+</span>
+                                                    </div>
+                                                    <div class="popRanking ">
+                                                        <div class="slim_ranking ">
+                                                            #50 of 492 hotels in Dubai </div>
+                                                    </div>
+                                                </div>
+                                                <div class="listing_jfy ">
+                                                    <span class="slim_ranking " onclick="ta.call(&#39;ta.overlays.Factory.loadJFYInformationInline&#39;, event, this, 1, &#39;inline_hover&#39;); ">
+#1 Just for You </span>
+                                                    <span class="reason ">
+<span class="short ">
+People from the UK like this hotel, Good…
+<span class="more " onmouseover="ta.plc_hotels_list_short_cells_0_handlers.jfyMoreOverlay(event, this); ">more</span> </span>
+                                                    <span class="full ">
+People from the UK like this hotel, Good choice for travellers who love beaches, Has a bar/lounge
+<span class="less ">less</span> </span>
+                                                    </span>
+                                                    <!--trkrsn-->
+                                                    <!--etk-->
+                                                </div>
+                                                <ul class="listing_reviews stacked ">
+                                                    <li class=" ">
+                                                        <span class="title ">“<a onclick="ta.util.cookie.setPIDCookie(15177); ta.setEvtCookie(&#39;Reviews&#39;, &#39;Snippet&#39;, &#39;251313244&#39;, 1, this.href); " target="_blank " href="http://www.tripadvisor.co.uk/ShowUserReviews-g295424-d1022759-r251313244-Atlantis_The_Palm-Dubai_Emirate_of_Dubai.html#UR251313244 " title="Iconic ShuQi Spa at Atlantis the Palm ">Iconic ShuQi Spa at Atlantis the Palm</a>”</span>
+                                                        <span class="date ">27/01/2015</span>
+                                                    </li>
+                                                    <li class="last ">
+                                                        <span class="title ">“<a onclick="ta.util.cookie.setPIDCookie(15177); ta.setEvtCookie(&#39;Reviews&#39;, &#39;Snippet&#39;, &#39;251300249&#39;, 2, this.href); " target="_blank " href="http://www.tripadvisor.co.uk/ShowUserReviews-g295424-d1022759-r251300249-Atlantis_The_Palm-Dubai_Emirate_of_Dubai.html#UR251300249 " title="A Place To Spend Whole Stay in Dubai..! ">A Place To Spend Whole Stay in Dubai..!</a>”</span>
+                                                        <span class="date ">27/01/2015</span>
+                                                    </li>
+                                                </ul>
+                                                <div class="p13n_reasoning_v2 ">
+                                                </div>
+                                            </div>
+                                            <div class="metaPriceInfo miniMetaRedesign ">
+                                                <div class="meta_date_wrapper withoutLabels moreProminent fl ">
+                                                    <span class="meta_date_field check_in first ">
+<span tabindex="0 " class=" date_picker_calendar_wrap dual_date no_cpu classicText classicStyling moreProminent " onclick="ta.call(&#39;ta.overlays.Factory.loadDatePicker&#39;, event, this, &#39;1022759&#39;, false, ta.servlet.HACSearch.doMetaDateSearch ); " data-in="true ">
+<span id="date_picker_in_1022759 " class="date_picker date moreProminent sprite-calendar-ylw dpv5 no_cpu id_1022759 ">Check In</span>
+                                                    </span>
+                                                    </span>
+                                                    <span class="smallPointingTriangle "> <img class="rightPointing " src="./30 Best Dubai Hotels on TripAdvisor - Prices & Reviews for the Top Rated Accommodation in Dubai, United Arab Emirates_files/triangle2.gif " alt=" ">
+</span>
+                                                    <span class="meta_date_field check_out ">
+<span tabindex="0 " class="date_picker_calendar_wrap dual_date no_cpu classicText classicStyling moreProminent out_date " onclick="ta.store(&#39;ta.calendar.isOutDateTrigger&#39;, true); ta.call(&#39;ta.overlays.Factory.loadDatePicker&#39;, event, this, &#39;1022759&#39;, false, ta.servlet.HACSearch.doMetaDateSearch ); ">
+<span id="date_picker_out_1022759 " class="date_picker out_date date moreProminent sprite-calendar-ylw no_cpu id_1022759 ">Check Out</span>
+                                                    </span>
+                                                    </span>
+                                                </div>
+                                                <div class="meta_listings easyClear ">
+                                                    <div class="header no_cpu " onmouseover=" " onmouseout=" " data-provider=" " data-navarea-linktype="Chevron ">
+                                                        <div class="crOverlayButton custom_area_QC_Hotels_Meta delayOpen ">
+                                                            <span onclick="ta.widgets.calendar.trackCRButtonClick(); ta.call(&#39;ta.overlays.Factory.simulateDatePickerClick&#39;, event, ta.id(this), &#39;1022759&#39;, false, ta.widgets.calendar.updateHLCalendar); event.returnValue=false; return false; " class="commerceBtn commerceBtnLrg commerceBtnLrgAlt commerceBtnHover fl ">Show Prices</span> <span class="overlaySrc "></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--etk-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    </div>
+        </div>
+
+
+        <!--<div id="gmap_canvas"></div>-->
+    </div><!--/ HOMEPAGE-->
 
 </body>
 
