--- a/references.html
+++ b/references.html
@@ -3,4 +3,7 @@
 <a href="https://developers.google.com/maps/documentation/javascript/3.exp/reference#Autocomplete">
 https://developers.google.com/maps/documentation/javascript/3.exp/reference#Autocomplete
 </a>
+<a href="http://getskel.com/docs#grid-system">
+http://getskel.com/docs#grid-system
+</a>
 </html>
