Work in progress

--- a/html5up-alpha/index.html
+++ b/html5up-alpha/index.html
@@ -74,7 +74,7 @@
 <!--<input id="gmap_keyword" type="text" name="gmap_keyword" class="big_text sHotels fl focusInput focusClear no_cpu typeahead beforeOnLoad" tabindex="2" autocomplete="off" onfocus="ta.trackEventOnPage('PYPT_search', 'hotel', 'focus', 0, false);" placeholder="socks">                    -->
                     <div class="row %25" style="margin-left: auto; margin-right: auto; width: 80%;">
                         <div class="5u">
-						      <input type="text" name="ba_where" id="ba_what" value="" placeholder="e.g Oxford Street, London, UK" onfocus="geolocate()"/>
+						      <input type="text" name="ba_where" id="ba_where" value="" placeholder="e.g Oxford Street, London, UK" onfocus="geolocate()"/>
 				        </div>
 				        <div class="5u">
 						      <input type="text" name="ba_what" id="ba_what" value="" placeholder="e.g socks" />
@@ -85,6 +85,60 @@
                     </div>
 <!--                </form>-->
 			</section>
+
+
+        <section class="box">
+<!--								<h3>Table</h3>-->
+
+<!--								<h4>Default</h4>-->
+								<div class="table-wrapper">
+									<table>
+<!--
+										<thead>
+											<tr>
+												<th>Name</th>
+												<th>Description</th>
+												<th>Price</th>
+											</tr>
+										</thead>
+-->
+										<tbody>
+											<tr>
+												<td>Something</td>
+												<td>Ante turpis integer aliquet porttitor.</td>
+												<td>29.99</td>
+											</tr>
+											<tr>
+												<td>Nothing</td>
+												<td>Vis ac commodo adipiscing arcu aliquet.</td>
+												<td>19.99</td>
+											</tr>
+											<tr>
+												<td>Something</td>
+												<td> Morbi faucibus arcu accumsan lorem.</td>
+												<td>29.99</td>
+											</tr>
+											<tr>
+												<td>Nothing</td>
+												<td>Vitae integer tempus condimentum.</td>
+												<td>19.99</td>
+											</tr>
+											<tr>
+												<td>Something</td>
+												<td>Ante turpis integer aliquet porttitor.</td>
+												<td>29.99</td>
+											</tr>
+										</tbody>
+<!--
+										<tfoot>
+											<tr>
+												<td colspan="2"></td>
+												<td>100.00</td>
+											</tr>
+										</tfoot>
+-->
+									</table>
+								</div>
 
 		<!-- Main -->
 <!--			<section id="main" class="container">
