--- a/examples/PlaceAutocompleteAddressForm.html
+++ b/examples/PlaceAutocompleteAddressForm.html
@@ -66,7 +66,7 @@ function fillInAddress() {
 // Bias the autocomplete object to the user's geographical location,
 // as supplied by the browser's 'navigator.geolocation' object.
 function geolocate() {
-    alert("Hello");
+//    alert("Hello");
     if (navigator.geolocation) {
     navigator.geolocation.getCurrentPosition(function(position) {
       var geolocation = new google.maps.LatLng(
