Work in progress

--- a/references.html
+++ b/references.html
@@ -6,4 +6,7 @@ https://developers.google.com/maps/documentation/javascript/3.exp/reference#Auto
 <a href="http://getskel.com/docs#grid-system">
 http://getskel.com/docs#grid-system
 </a>
+<a href="https://developers.google.com/maps/documentation/javascript/examples/place-search">
+https://developers.google.com/maps/documentation/javascript/examples/place-search
+</a>
 </html>
