Work in progress

--- a/references.html
+++ b/references.html
@@ -1,12 +1,15 @@
 <html>
 <head></head>
-<a href="https://developers.google.com/maps/documentation/javascript/3.exp/reference#Autocomplete">
+<a href="https://github.com/lvnhmd/brandadvisor/commits/master" target="_blank">
+https://github.com/lvnhmd/brandadvisor/commits/master
+</a></br></br>
+<a href="https://developers.google.com/maps/documentation/javascript/3.exp/reference#Autocomplete" target="_blank">
 https://developers.google.com/maps/documentation/javascript/3.exp/reference#Autocomplete
-</a>
-<a href="http://getskel.com/docs#grid-system">
+</a></br></br>
+<a href="http://getskel.com/docs#grid-system" target="_blank">
 http://getskel.com/docs#grid-system
-</a>
-<a href="https://developers.google.com/maps/documentation/javascript/examples/place-search">
+</a></br></br>
+<a href="https://developers.google.com/maps/documentation/javascript/examples/place-search" target="_blank">
 https://developers.google.com/maps/documentation/javascript/examples/place-search
-</a>
+</a></br></br>
 </html>
