--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
+                        <li><a href="references.html" target="_blank">References</a></li>
 						<li>
 							<a href="" class="icon fa-angle-down">Layouts</a>
 							<ul>
 								<li><a href="generic.html">Generic</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="elements.html">Elements</a></li>
-								<li>
+                                <li>
 									<a href="">Submenu</a>
 									<ul>
 										<li><a href="#">Option One</a></li>
