Work in progress

--- a/references.html
+++ b/references.html
@@ -12,4 +12,10 @@ http://getskel.com/docs#grid-system
 <a href="https://developers.google.com/maps/documentation/javascript/examples/place-search" target="_blank">
 https://developers.google.com/maps/documentation/javascript/examples/place-search
 </a></br></br>
+<a href="http://javascriptissexy.com/understand-javascript-callback-functions-and-use-them/" target="_blank">
+http://javascriptissexy.com/understand-javascript-callback-functions-and-use-them/
+</a></br></br>
+<a href="http://html5up.net/alpha" target="_blank">
+http://html5up.net/alpha
+</a></br></br>
 </html>
