Work in progress

--- a/index.html
+++ b/index.html
@@ -5,101 +5,138 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Alpha by HTML5 UP</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.dropotron.min.js"></script>
-		<script src="js/jquery.scrollgress.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
-        <script src="js/script.js"></script>
 
-        <noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-	</head>
-	<body class="landing">
+<head>
+    <title>Alpha by HTML5 UP</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.dropotron.min.js"></script>
+    <script src="js/jquery.scrollgress.min.js"></script>
+    <script src="js/skel.min.js"></script>
+    <script src="js/skel-layers.min.js"></script>
+    <script src="js/init.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+    <script src="js/script.js"></script>
 
-		<!-- Header -->
-			<header id="header" class="alt">
-				<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-                        <li><a href="references.html" target="_blank">References</a></li>
-						<li>
-							<a href="" class="icon fa-angle-down">Layouts</a>
-							<ul>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="contact.html">Contact</a></li>
-								<li><a href="elements.html">Elements</a></li>
-                                <li>
-									<a href="">Submenu</a>
-									<ul>
-										<li><a href="#">Option One</a></li>
-										<li><a href="#">Option Two</a></li>
-										<li><a href="#">Option Three</a></li>
-										<li><a href="#">Option Four</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li><a href="#" class="button">Sign Up</a></li>
-					</ul>
-				</nav>
-			</header>
+    <noscript>
+        <link rel="stylesheet" href="css/skel.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/style-wide.css" />
+    </noscript>
+    <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+</head>
 
-		<!-- Banner -->
-			<section id="banner">
-				<h2>Alpha</h2>
-				<p>Another fine responsive site template freebie by HTML5 UP.</p>
-<!--
+<body class="landing">
+
+    <!-- Header -->
+    <header id="header" class="alt">
+        <h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
+        <nav id="nav">
+            <ul>
+                <li><a href="index.html">Home</a>
+                </li>
+                <li><a href="references.html" target="_blank">References</a>
+                </li>
+                <li>
+                    <a href="" class="icon fa-angle-down">Layouts</a>
+                    <ul>
+                        <li><a href="generic.html">Generic</a>
+                        </li>
+                        <li><a href="contact.html">Contact</a>
+                        </li>
+                        <li><a href="elements.html">Elements</a>
+                        </li>
+                        <li>
+                            <a href="">Submenu</a>
+                            <ul>
+                                <li><a href="#">Option One</a>
+                                </li>
+                                <li><a href="#">Option Two</a>
+                                </li>
+                                <li><a href="#">Option Three</a>
+                                </li>
+                                <li><a href="#">Option Four</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><a href="#" class="button">Sign Up</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Banner -->
+    <section id="banner">
+        <h2>Alpha</h2>
+        <p>Another fine responsive site template freebie by HTML5 UP.</p>
+        <!--
 				<ul class="actions">
 					<li><a href="#" class="button special">Sign Up</a></li>
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul>
 -->
-<!--                <form method="post" action="#">-->
-<!--                                                                        <input id="gmap_where" type="text" name="gmap_where" class="big_text sHotels fl focusInput focusClear no_cpu typeahead beforeOnLoad" tabindex="1" autocomplete="off" onFocus="geolocate()" placeholder="e.g Oxford Street, London, UK">-->
+        <!--                <form method="post" action="#">-->
+        <!--                                                                        <input id="gmap_where" type="text" name="gmap_where" class="big_text sHotels fl focusInput focusClear no_cpu typeahead beforeOnLoad" tabindex="1" autocomplete="off" onFocus="geolocate()" placeholder="e.g Oxford Street, London, UK">-->
 
-<!--<input id="gmap_keyword" type="text" name="gmap_keyword" class="big_text sHotels fl focusInput focusClear no_cpu typeahead beforeOnLoad" tabindex="2" autocomplete="off" onfocus="ta.trackEventOnPage('PYPT_search', 'hotel', 'focus', 0, false);" placeholder="socks">                    -->
-                    <div class="row %25" style="margin-left: auto; margin-right: auto; width: 80%;">
-                        <div class="5u">
-						      <input type="text" name="ba_where" id="ba_where" value="" placeholder="e.g Oxford Street, London, UK" onfocus="geolocate()"/>
-				        </div>
-				        <div class="5u">
-						      <input type="text" name="ba_what" id="ba_what" value="" placeholder="e.g socks" />
-						</div>
-                        <div class="2u">
-                            <input type="button" value="Search" onclick="findPlaces(); return false;"/>
-                        </div>
+        <!--<input id="gmap_keyword" type="text" name="gmap_keyword" class="big_text sHotels fl focusInput focusClear no_cpu typeahead beforeOnLoad" tabindex="2" autocomplete="off" onfocus="ta.trackEventOnPage('PYPT_search', 'hotel', 'focus', 0, false);" placeholder="socks">                    -->
+        <div class="row %25" style="margin-left: auto; margin-right: auto; width: 80%;">
+            <div class="5u">
+                <input type="text" name="ba_where" id="ba_where" value="" placeholder="e.g Oxford Street, London, UK" onfocus="geolocate()" />
+            </div>
+            <div class="5u">
+                <input type="text" name="ba_what" id="ba_what" value="" placeholder="e.g socks" />
+            </div>
+            <div class="2u">
+                <input type="button" value="Search" onclick="findPlaces(); return false;" />
+            </div>
+        </div>
+        <!--                </form>-->
+    </section>
+
+
+    <section class="box">
+        <!--								<h3>Table</h3>-->
+
+        <!--								<h4>Default</h4>-->
+        <div id="main">
+            <div class="container">
+                <div class="row main-row">
+
+                    <div class="12u">
+                        <section class="middle-content">
+                            <ul class="big-image-list" id="places">
+                                <li>
+                                    <div id="imgleft" ><a href="#"><img src="images/pic3.jpg" alt="" class="left" />
+                                    </a></div>
+                                    <h3>Magna Gravida Dolore</h3>
+                                    <p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo facilisis amet quis consectetur in, sollicitudin vitae justo. Cras Maecenas eu arcu purus, phasellus fermentum elit.</p>
+                                </li>
+                                <li>
+                                    <div id="imgleft"><a href="#"><img src="images/pic4.jpg" alt="" class="left" />
+                                    </a></div>
+                                    <h3>Magna Gravida Dolore</h3>
+                                    <p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo facilisis amet quis consectetur in, sollicitudin vitae justo. Cras Maecenas eu arcu purus, phasellus fermentum elit.</p>
+                                </li>
+                                <li>
+                                    <div id="imgleft"><a href="#"><img src="images/pic5.jpg" alt="" class="left" />
+                                    </a></div>
+                                    <h3>Magna Gravida Dolore</h3>
+                                    <p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo facilisis amet quis consectetur in, sollicitudin vitae justo. Cras Maecenas eu arcu purus, phasellus fermentum elit.</p>
+                                </li>
+                            </ul>
+                        </section>
                     </div>
-<!--                </form>-->
-			</section>
-
-
-        <section class="box">
-<!--								<h3>Table</h3>-->
-
-<!--								<h4>Default</h4>-->
-			<div id="places">
-                <ul class="alt">
-                    <li>Dolor pulvinar etiam magna etiam.</li>
-                    <li>Sagittis adipiscing lorem eleifend.</li>
-                    <li>Felis enim feugiat dolore viverra.</li>
-                </ul>
                 </div>
-		<!-- Main -->
-<!--			<section id="main" class="container">
+            </div>
+        </div>
+
+        <!-- Main -->
+        <!--			<section id="main" class="container">
 
 
 				<section class="box special">
@@ -114,7 +151,7 @@
 				</section>
 -->
 
-<!--
+        <!--
 				<section class="box special features">
 					<div class="features-row">
 						<section>
@@ -143,7 +180,7 @@
 				</section>
 -->
 
-<!--
+        <!--
 				<div class="row">
 					<div class="6u 12u(narrower)">
 
@@ -174,8 +211,8 @@
 
 			</section> -->
 
-		<!-- CTA -->
-<!--
+        <!-- CTA -->
+        <!--
 			<section id="cta">
 
 				<h2>Sign up for beta access</h2>
@@ -195,20 +232,29 @@
 			</section>
 -->
 
-		<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-					<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-					<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</footer>
+        <!-- Footer -->
+        <footer id="footer">
+            <ul class="icons">
+                <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a>
+                </li>
+                <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a>
+                </li>
+                <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
+                </li>
+                <li><a href="#" class="icon fa-github"><span class="label">Github</span></a>
+                </li>
+                <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a>
+                </li>
+                <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a>
+                </li>
+            </ul>
+            <ul class="copyright">
+                <li>&copy; Untitled. All rights reserved.</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a>
+                </li>
+            </ul>
+        </footer>
 
-	</body>
+</body>
+
 </html>
