Work in progress

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
             <div class="container">
                 <div class="row main-row">
 
-                    <div class="12u">
+                    <div class="12u" >
                         <section class="middle-content">
                             <ul class="big-image-list" id="places">
-                                <li>
+                                <li style="border: 5px solid black">
                                     <div id="imgleft" ><a href="#"><img src="images/pic3.jpg" alt="" class="left" />
                                     </a></div>
                                     <h3>Magna Gravida Dolore</h3>
