--- a/Skinny Frames HTML/skinny-frames-css/template.html
+++ b/Skinny Frames HTML/skinny-frames-css/template.html
@@ -3,31 +3,38 @@
 <!--[if IE 7 ]><html lang="en" class="no-js ie7"> <![endif]-->
 <!--[if IE 8 ]><html lang="en" class="no-js ie8"> <![endif]-->
 <!--[if IE 9 ]><html lang="en" class="no-js ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--><html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!-->
+<html lang="en" class="no-js">
+<!--<![endif]-->
+
 <head>
-<meta charset="utf-8">
-<meta name="author" content="ThemeFuse">
-<meta name="keywords" content="">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Skinny Frames | Template</title>
+    <meta charset="utf-8">
+    <meta name="author" content="ThemeFuse">
+    <meta name="keywords" content="">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Skinny Frames | Template</title>
 
-<!-- main JS libs -->
-<script src="js/libs/modernizr.min.js"></script>
-<script src="js/libs/jquery-1.10.2.min.js"></script>
-<script src="js/libs/jquery-ui.min.js"></script>
-<script src="js/libs/bootstrap.min.js"></script>
+    <!-- main JS libs -->
+    <script src="js/libs/modernizr.min.js"></script>
+    <script src="js/libs/jquery-1.10.2.min.js"></script>
+    <script src="js/libs/jquery-ui.min.js"></script>
+    <script src="js/libs/bootstrap.min.js"></script>
 
-<!-- Style CSS -->
-<link href="css/bootstrap.css" media="screen" rel="stylesheet">
-<link href="css/custom.css" media="screen" rel="stylesheet">
-<link href="style.css" media="screen" rel="stylesheet">
+    <!-- Style CSS -->
+    <link href="css/bootstrap.css" media="screen" rel="stylesheet">
+    <link href="css/custom.css" media="screen" rel="stylesheet">
+    <link href="style.css" media="screen" rel="stylesheet">
 
-    
-<!-- General Scripts -->
-<script src="js/general.js"></script>
 
-<!--[if lt IE 9]><script src="js/respond.min.js"></script><![endif]-->
-<!--[if gte IE 9]>
+    <!-- General Scripts -->
+    <script src="js/general.js"></script>
+
+    <!--custom-->
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+    <script src="../../js/script.js"></script>
+
+    <!--[if lt IE 9]><script src="js/respond.min.js"></script><![endif]-->
+    <!--[if gte IE 9]>
 <style type="text/css">
     .gradient {filter: none !important;}
 </style>
@@ -35,26 +42,36 @@
 </head>
 
 <body>
-<div class="body-wrap">
-    <!--container-->
-    <div class="container">
-         <!-- search widget -->
-                    <div class="add-comment contact-form boxed">
+    <div class="body-wrap">
+        <div class="intro-header">
+            <div class="container">
+                <div class="intro-message">
+                    <h1>hello</h1>
+<!--                    <h3>shmello</h3>-->
+                    <!-- search widget -->
+                    <div class="add-comment contact-form boxed margins">
                         <div class="inner">
-                            <form method="get" id="searchform" action="#">
-                                <div class="form-inner clearfix">
-                                    <div id="mainsearchfield" class="field_text"><input name="search" value="" type="text" placeholder="Type word here" /></div>
-                                    <div id="mainsearchfield" class="field_text"><input name="search" value="" type="text" placeholder="Type word here" /></div>
-                                    <span class="btn btn-middle"><input type="submit" value="Search" /></span>
+                            <div class="form-inner clearfix">
+                                <div id="mainsearchfield" class="field_text lightPlaceholder">
+                                    <input type="text" name="ba_where" id="ba_where" value="" placeholder="e.g Oxford Street, London, UK" onfocus="geolocate()" />
                                 </div>
-                            </form>
+                                <div id="mainsearchfield" class="field_text lightPlaceholder">
+                                    <input type="text" name="ba_what" id="ba_what" value="" placeholder="e.g socks" />
+                                </div>
+                                <span class="btn btn-middle btn-caps"><input type="button" value="Search" onclick="findPlaces(); return false;" /></span>
+                            </div>
                         </div>
                     </div>
                     <!--/ search widget -->
-
-
+                </div>
+                <!--/  intro-message-->
+            </div>
+            <!--/ container -->
+        </div>
+        <!--/  intro-header-->
+        <ul class="big-image-list" id="places"></ul>
     </div>
-    <!--/ container -->
-</div>
+    <!--/  body-wrap-->
 </body>
+
 </html>
