--- a/index.html
+++ b/index.html
@@ -1,260 +1,77 @@
-<!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<!doctype html>
+<!--[if lt IE 7 ]><html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]><html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]><html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]><html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!-->
+<html lang="en" class="no-js">
+<!--<![endif]-->
 
 <head>
-    <title>Alpha by HTML5 UP</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.dropotron.min.js"></script>
-    <script src="js/jquery.scrollgress.min.js"></script>
-    <script src="js/skel.min.js"></script>
-    <script src="js/skel-layers.min.js"></script>
-    <script src="js/init.js"></script>
+    <meta charset="utf-8">
+    <meta name="author" content="ThemeFuse">
+    <meta name="keywords" content="">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Skinny Frames | Template</title>
+
+    <!-- main JS libs -->
+    <script src="js/libs/modernizr.min.js"></script>
+    <script src="js/libs/jquery-1.10.2.min.js"></script>
+    <script src="js/libs/jquery-ui.min.js"></script>
+    <script src="js/libs/bootstrap.min.js"></script>
+
+    <!-- Style CSS -->
+    <link href="css/bootstrap.css" media="screen" rel="stylesheet">
+    <link href="css/custom.css" media="screen" rel="stylesheet">
+    <link href="css/style.css" media="screen" rel="stylesheet">
+
+
+    <!-- General Scripts -->
+    <script src="js/general.js"></script>
+
+    <!--custom-->
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
     <script src="js/script.js"></script>
 
-    <noscript>
-        <link rel="stylesheet" href="css/skel.css" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/style-wide.css" />
-    </noscript>
-    <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+    <!--[if lt IE 9]><script src="js/respond.min.js"></script><![endif]-->
+    <!--[if gte IE 9]>
+<style type="text/css">
+    .gradient {filter: none !important;}
+</style>
+<![endif]-->
 </head>
 
-<body class="landing">
-
-    <!-- Header -->
-    <header id="header" class="alt">
-        <h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
-        <nav id="nav">
-            <ul>
-                <li><a href="index.html">Home</a>
-                </li>
-                <li><a href="references.html" target="_blank">References</a>
-                </li>
-                <li>
-                    <a href="" class="icon fa-angle-down">Layouts</a>
-                    <ul>
-                        <li><a href="generic.html">Generic</a>
-                        </li>
-                        <li><a href="contact.html">Contact</a>
-                        </li>
-                        <li><a href="elements.html">Elements</a>
-                        </li>
-                        <li>
-                            <a href="">Submenu</a>
-                            <ul>
-                                <li><a href="#">Option One</a>
-                                </li>
-                                <li><a href="#">Option Two</a>
-                                </li>
-                                <li><a href="#">Option Three</a>
-                                </li>
-                                <li><a href="#">Option Four</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li><a href="#" class="button">Sign Up</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Banner -->
-    <section id="banner">
-        <h2>Alpha</h2>
-        <p>Another fine responsive site template freebie by HTML5 UP.</p>
-        <!--
-				<ul class="actions">
-					<li><a href="#" class="button special">Sign Up</a></li>
-					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
--->
-        <!--                <form method="post" action="#">-->
-        <!--                                                                        <input id="gmap_where" type="text" name="gmap_where" class="big_text sHotels fl focusInput focusClear no_cpu typeahead beforeOnLoad" tabindex="1" autocomplete="off" onFocus="geolocate()" placeholder="e.g Oxford Street, London, UK">-->
-
-        <!--<input id="gmap_keyword" type="text" name="gmap_keyword" class="big_text sHotels fl focusInput focusClear no_cpu typeahead beforeOnLoad" tabindex="2" autocomplete="off" onfocus="ta.trackEventOnPage('PYPT_search', 'hotel', 'focus', 0, false);" placeholder="socks">                    -->
-        <div class="row %25" style="margin-left: auto; margin-right: auto; width: 80%;">
-            <div class="5u">
-                <input type="text" name="ba_where" id="ba_where" value="" placeholder="e.g Oxford Street, London, UK" onfocus="geolocate()" />
-            </div>
-            <div class="5u">
-                <input type="text" name="ba_what" id="ba_what" value="" placeholder="e.g socks" />
-            </div>
-            <div class="2u">
-                <input type="button" value="Search" onclick="findPlaces(); return false;" />
-            </div>
-        </div>
-        <!--                </form>-->
-    </section>
-
-
-    <section class="box">
-        <!--								<h3>Table</h3>-->
-
-        <!--								<h4>Default</h4>-->
-        <div id="main">
+<body>
+    <div class="body-wrap">
+        <div class="intro-header">
             <div class="container">
-                <div class="row main-row">
-
-                    <div class="12u" >
-                        <section class="middle-content">
-                            <ul class="big-image-list" id="places">
-                                <li style="border: 5px solid black">
-                                    <div id="imgleft" ><a href="#"><img src="images/pic3.jpg" alt="" class="left" />
-                                    </a></div>
-                                    <h3>Magna Gravida Dolore</h3>
-                                    <p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo facilisis amet quis consectetur in, sollicitudin vitae justo. Cras Maecenas eu arcu purus, phasellus fermentum elit.</p>
-                                </li>
-                                <li>
-                                    <div id="imgleft"><a href="#"><img src="images/pic4.jpg" alt="" class="left" />
-                                    </a></div>
-                                    <h3>Magna Gravida Dolore</h3>
-                                    <p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo facilisis amet quis consectetur in, sollicitudin vitae justo. Cras Maecenas eu arcu purus, phasellus fermentum elit.</p>
-                                </li>
-                                <li>
-                                    <div id="imgleft"><a href="#"><img src="images/pic5.jpg" alt="" class="left" />
-                                    </a></div>
-                                    <h3>Magna Gravida Dolore</h3>
-                                    <p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo facilisis amet quis consectetur in, sollicitudin vitae justo. Cras Maecenas eu arcu purus, phasellus fermentum elit.</p>
-                                </li>
-                            </ul>
-                        </section>
+                <div class="intro-message">
+                    <h1>hello</h1>
+<!--                    <h3>shmello</h3>-->
+                    <!-- search widget -->
+                    <div class="add-comment contact-form boxed margins">
+                        <div class="inner">
+                            <div class="form-inner clearfix">
+                                <div id="mainsearchfield" class="field_text lightPlaceholder">
+                                    <input type="text" name="ba_where" id="ba_where" value="" placeholder="e.g Oxford Street, London, UK" onfocus="geolocate()" />
+                                </div>
+                                <div id="mainsearchfield" class="field_text lightPlaceholder">
+                                    <input type="text" name="ba_what" id="ba_what" value="" placeholder="e.g socks" />
+                                </div>
+                                <span class="btn btn-middle btn-caps"><input type="button" value="Search" onclick="findPlaces(); return false;" /></span>
+                            </div>
+                        </div>
                     </div>
+                    <!--/ search widget -->
                 </div>
+                <!--/  intro-message-->
             </div>
+            <!--/ container -->
         </div>
-
-        <!-- Main -->
-        <!--			<section id="main" class="container">
-
-
-				<section class="box special">
-					<header class="major">
-						<h2>Introducing the ultimate mobile app
-						<br />
-						for doing stuff with your phone</h2>
-						<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-						adipiscing nunc adipiscing. Condimentum turpis massa.</p>
-					</header>
-					<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-				</section>
--->
-
-        <!--
-				<section class="box special features">
-					<div class="features-row">
-						<section>
-							<span class="icon major fa-bolt accent2"></span>
-							<h3>Magna etiam</h3>
-							<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-						</section>
-						<section>
-							<span class="icon major fa-area-chart accent3"></span>
-							<h3>Ipsum dolor</h3>
-							<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-						</section>
-					</div>
-					<div class="features-row">
-						<section>
-							<span class="icon major fa-cloud accent4"></span>
-							<h3>Sed feugiat</h3>
-							<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-						</section>
-						<section>
-							<span class="icon major fa-lock accent5"></span>
-							<h3>Enim phasellus</h3>
-							<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-						</section>
-					</div>
-				</section>
--->
-
-        <!--
-				<div class="row">
-					<div class="6u 12u(narrower)">
-
-						<section class="box special">
-							<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Sed lorem adipiscing</h3>
-							<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
-							</ul>
-						</section>
-
-					</div>
-					<div class="6u 12u(narrower)">
-
-						<section class="box special">
-							<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Accumsan integer</h3>
-							<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
-							</ul>
-						</section>
-
-					</div>
-				</div>
-
-
-			</section> -->
-
-        <!-- CTA -->
-        <!--
-			<section id="cta">
-
-				<h2>Sign up for beta access</h2>
-				<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
-
-				<form>
-					<div class="row uniform 50%">
-						<div class="8u 12u(mobilep)">
-							<input type="email" name="email" id="email" placeholder="Email Address" />
-						</div>
-						<div class="4u 12u(mobilep)">
-							<input type="submit" value="Sign Up" class="fit" />
-						</div>
-					</div>
-				</form>
-
-			</section>
--->
-
-        <!-- Footer -->
-        <footer id="footer">
-            <ul class="icons">
-                <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a>
-                </li>
-                <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a>
-                </li>
-                <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
-                </li>
-                <li><a href="#" class="icon fa-github"><span class="label">Github</span></a>
-                </li>
-                <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a>
-                </li>
-                <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a>
-                </li>
-            </ul>
-            <ul class="copyright">
-                <li>&copy; Untitled. All rights reserved.</li>
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a>
-                </li>
-            </ul>
-        </footer>
-
+        <!--/  intro-header-->
+        <ul class="big-image-list" id="places"></ul>
+    </div>
+    <!--/  body-wrap-->
 </body>
 
 </html>
