Work in progress

--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
         <!--/  intro-header-->
 <!--        <ul class="big-image-list" id="places"></ul>-->
         <!-- .row-->
-			<div class="row">
+		<div class="container">
+		<!--content-->
+		<div class="content " role="main">
+        <div class="row">
 				<div class="col-sm-12">
 					<div class="product-list clearfix">
 						<ul id="places">
@@ -91,11 +94,13 @@
 								<div class="product-remove"><a href="#"><img src="images/icons/remove.png" alt=""></a></div>
 							</li>
 							<!-- / .product-item -->
-						</ul>
+                        </ul>
 					</div>
 				</div>
 			</div>
 			<!--/ .row-->
+            </div>
+        </div>
     </div>
     <!--/  body-wrap-->
 </body>
