--- a/index.html
+++ b/index.html
@@ -47,19 +47,13 @@
             <div class="container">
                 <div class="intro-message">
                     <h1></h1>
-                    <!--                    <h3>shmello</h3>-->
-                    <!-- search widget -->
                     <div class="add-comment contact-form boxed margins">
                         <div class="inner">
                             <div class="form-inner clearfix">
                                 <div id="mainsearchfield" class="field_text lightPlaceholder">
                                     <input type="text" name="ba_where" id="ba_where" value="" placeholder="e.g Oxford Street, London, UK" onfocus="geolocate()" />
                                 </div>
-                                <!--
-                                <div id="mainsearchfield" class="field_text lightPlaceholder">
-                                    <input type="text" name="ba_what" id="ba_what" value="" placeholder="e.g socks" />
-                                </div>
--->
+
                                 <span class="btn btn-middle btn-caps"><input type="button" value="Search" onclick="findPlaces(); return false;" /></span>
                             </div>
                         </div>
@@ -76,62 +70,78 @@
         <div class="container">
             <!--content-->
             <div class="content " role="main">
-
                 <div class="row">
                     <!-- Profile -->
                     <div class="widget-container widget-profile boxed">
                         <div class="inner clearfix">
                             <div class="avatar"><img src="logos/eu.bape.com.png" alt="" />
                             </div>
-
-                            <span class="subtitle"><a href="http://eu.bape.com" target="_new" title="2 topics">A BATHING APE</a></span>
-
-                            <div class="roundavatar"><img src="images/temp/avatar.png" alt=""/></div>
-
-                            <div class="tagcloud">
-                                <a href="#" title="2 topics"><span>t-shirt</span></a>
-                                <a href="#" title="3 topics"><span>tshirt</span></a>
-                                <a href="#" title="4 topics"><span>jacket</span></a>
-                                <a href="#" title="5 topics"><span>wallet</span></a>
-                                <a href="#" title="6 topics"><span>hoody</span></a>
+                            <div class="col-sm-6">
+                                <span class="subtitle"><a href="http://eu.bape.com" target="_new" title="2 topics">A BATHING APE</a></span>
                             </div>
-                            <!--/ tags -->
-<!--
-                            <div class="follow">
-                                <a href="#" class="btn btn-green"><span>Follow</span></a>
-                                <div class="followers pull-right">
-                                    <strong>1687</strong>
-                                    <span>followers</span>
+                            <!-- Rating Stars -->
+                            <div class="col-sm-6">
+                                <div class="rating">
+                                    <span class="star on" rel="1"></span>
+                                    <span class="star on" rel="2"></span>
+                                    <span class="star on" rel="3"></span>
+                                    <span class="star off" rel="4"></span>
+                                    <span class="star off" rel="5"></span>
                                 </div>
                             </div>
--->
+                            <!--/ Rating Stars -->
+
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="comment-body">
+                                        <div class="comment-text">
+
+                                            <div class="ba_comment-avatar">
+                                                <img src="images/temp/avatar3.png" alt="" />
+                                            </div>
+                                            <div class="comment-entry">He made his film debut with a minor part in Back to the Future Part II (1989), then landed a succession.</div>
+                                            <div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--/ Profile -->
+
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="tagcloud">
+                                    <a href="#" title="2 topics"><span>t-shirt</span></a>
+                                    <a href="#" title="3 topics"><span>tshirt</span></a>
+                                    <a href="#" title="4 topics"><span>jacket</span></a>
+                                    <a href="#" title="5 topics"><span>wallet</span></a>
+                                    <a href="#" title="6 topics"><span>hoody</span></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <!--/ Profile -->
-
                 </div>
+                <!--/  container-->
+
             </div>
-        </div>
-        <!--/  container-->
-    </div>
-    <!--/  body-wrap-->
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.js'></script>
-    <script>
-        var app = angular.module('app', [])
-        app.controller('ListCtrl', function ($scope) {
-            console.log('init items')
-            $scope.list_items = [
+            <!--/  body-wrap-->
+            <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.js'></script>
+            <script>
+                var app = angular.module('app', [])
+                app.controller('ListCtrl', function ($scope) {
+                    console.log('init items')
+                    $scope.list_items = [
                 'Item 1',
                 'Item 2',
                 'Item 3'
             ];
-            console.log('post init items')
-            $scope.addListItem = function () {
-                console.log('push an item')
-                $scope.list_items.push('Item 4')
-            }
-        });
-    </script>
+                    console.log('post init items')
+                    $scope.addListItem = function () {
+                        console.log('push an item')
+                        $scope.list_items.push('Item 4')
+                    }
+                });
+            </script>
 </body>
 
 </html>
